footer and sidebar added

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/images/favicon.ico" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./src/assets/images/favicon.ico"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Electric Car, Solar \& Clean Energy | Tesla</title>
+    <title>Electric Car, Solar &amp; Clean Energy | Tesla</title>
   </head>
   <body>
     <div id="root"></div>
