--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="./src/assets/images/favicon.ico"
+      href="/images/favicon.ico"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Electric Car, Solar &amp; Clean Energy | Tesla</title>
